# lexisortable

./: LICENSE  README.md  example.py  pyproject.toml
lexisortable/: __init__.py  cli.py  lexisortable.py  lexiver.py
tests/: test_cli.py  test_lexisortable.py  test_lexiver.py
