[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lexisortable"
version = "a1.a0.a0"
description = "Library for turning integers and floats into lexicographically sortable strings"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
authors = []

[project.urls]
"Homepage" = "https://github.com/username/lexisortable"
"Bug Tracker" = "https://github.com/username/lexisortable/issues"

[project.scripts]
lexisort = "lexisortable.cli:main"
